--- a/styles/global.css
+++ b/styles/global.css
@@ -39,3 +39,10 @@ img {
   max-width: 100%;
   display: block;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: var(--colour-grey);
+    background: var(--colour-text-dark);
+  }
+}
