--- a/components/Button.module.css
+++ b/components/Button.module.css
@@ -6,13 +6,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0  8px 4px -4px var(--colour-text-light);
+  box-shadow: 0 8px 4px -4px var(--colour-text-light);
   cursor: pointer;
   transition: all ease-in-out 0.2s;
+  background-color: var(--colour-grey);
 }
 
 .button:hover {
   text-decoration: none;
   box-shadow: 0  20px 10px -8px var(--colour-ui-grey);
   transform: translate(0, -4px);
+}
+
+@media (prefers-color-scheme: dark) {
+  .button {
+    box-shadow: 0 8px 4px -4px black;
+  }
+  .button:hover {
+    box-shadow: 0  20px 10px -8px black;
+  }
 }
