Make dark mode bg darker, PV => IMDbTV, restyled projects list

--- a/components/Projects.module.css
+++ b/components/Projects.module.css
@@ -1,5 +1,12 @@
+.projects {
+  padding-left: 0;
+}
 .projects > li {
   margin-bottom: 16px;
+  list-style: none;
+  padding: 16px;
+  border: solid 2px var(--colour-blue);
+  border-radius: 4px;
 }
 .projects > li > p {
   margin: 4px 0;
